Revised ch 3.  Final draft.

--- a/model/hce.tex
+++ b/model/hce.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[b!]
 \centering
 \begin{tabular}{lcl}
 $e_{H}$ & $=$ & $v_{H}$ $\vert$ $x$ $\vert$ $e_{H}$ $e_{H}$ $\vert$ $e_{H}$ $\lbrace T\rbrace$ $\vert$ $o$ $e_{H}$ $e_{H}$ $\vert$ $\mathtt{if0}$ $e_{H}$ $e_{H}$ $e_{H}$ $\vert$ $f$ $e_{H}$ \\
