Revised ch 7, final draft.

--- a/chapter-7.tex
+++ b/chapter-7.tex
@@ -1,3 +1,3 @@
 \chapter{Conclusions}
 
-This work resolved three language incompatibilities in a system of interoperation for three diverse languages.  It resolved incompatible type systems with contracts for higher-order functions and lump types.  It resolved incompatible support for parametricity with label types.  It resolved incompatible evaluation strategies with delayed conversions for list constructions.  It defined a model of computation that can express interoperation where the aforementioned incompatibilities arise and resolve them, provided a proof of type soundness, and described an implementation of the model that supported additional language features.
+This work resolved three language incompatibilities in a system of interoperation for three diverse languages.  It resolved incompatible type systems with contracts for higher-order functions and lump types.  It resolved incompatible support for parametricity with label types.  It resolved incompatible evaluation strategies with delayed conversions for list constructions.  It defined a model of computation that can express interoperation where the aforementioned incompatibilities arise and resolve them, provided a proof of its type soundness, and described an implementation of it that supported additional language features.
