Fixed bib OPT entries.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -28,10 +28,10 @@
 
 @manual{ecma06,
   title = {Common Language Infrastructure (CLI)},
-  OPTorganization = {ECMA},
-  OPTedition = {4th},
-  OPTmonth = {June},
-  OPTyear = {2006},
+  organization = {ECMA},
+  edition = {4th},
+  month = {June},
+  year = {2006},
 }
 
 @article{findler02,
@@ -79,7 +79,7 @@
   title = {Preserving Parametricity While Sharing Higher-Order, Polymorphic Functions Between Scheme And ML},
   school = {California Polytechnic State University, San Luis Obispo},
   year = {2007},
-  OPTmonth = {June},
+  month = {June},
 }
 
 @article{matthews07,
@@ -98,17 +98,17 @@
 
 @manual{microsoft07,
   title = {Microsoft Interface Definition Language},
-  OPTorganization = {Microsoft},
-  OPTmonth = {November},
-  OPTyear = {2007},
+  organization = {Microsoft},
+  month = {November},
+  year = {2007},
 }
 
 @manual{omg04,
   title = {Common Object Request Broker Architecture (CORBA) Specification},
-  OPTorganization = {Object Management Group},
-  OPTedition = {3.1},
-  OPTmonth = {August},
-  OPTyear = {2004},
+  organization = {Object Management Group},
+  edition = {3.1},
+  month = {August},
+  year = {2004},
 }
 
 @book{pierce02,
