Revised ch 2 to reflect changes in ch 1 and took out the newbie explanations.

--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -1,8 +1,6 @@
 \chapter{Model of Computation}
 
-Embedding server languages within client languages as expressions succinctly expresses the client-server interaction of interoperation.  Embedded server expressions evaluate to values and convert to equivalent client values.  Value conversion represents servers sending data and clients receiving data.  Since Haskell, ML, and Scheme are functional languages, extended lambda calculi naturally represent and simplify them.
-
-Lambda calculus is a minimal model of computation that embodies the notions of function abstraction and function application.  Computations substitute function arguments for free occurrences of function parameters within function bodies.  Interoperation between two lambda calculi is expressed by embedding an expression from one language within an expression of the other language.  Embeddings use special syntactic forms called boundaries that indicate a change of language and expected (client) and actual (server) types.  Evaluation contexts determine evaluation strategies.
+Embedding languages within languages as expressions succinctly expresses the value exchange of interoperation.  Special syntactic forms, called boundaries, wrap embedded expressions and indicate a change of language and the expected and actual types of exchanged values.  Embedded expressions evaluate to values and their boundaries convert to equivalent values.  Value conversion represents the sending and receiving of values.  Since Haskell, ML, and Scheme are functional languages, extended lambda calculi naturally represent and simplify them.
 
 \section{Core Calculi}
 
@@ -12,31 +10,29 @@ The core calculi are the subset of the model that define the languages, but do n
 
 Lambda calculus is comprised of functions, variables, and function applications.  Haskell extends lambda calculus in several ways.  First, it adds natural numbers, addition and subtraction operations for natural numbers, and a condition that uses the natural number zero as true and all other natural numbers as false.
 
-Second, it adds list constructions that contain pairs of head and tail expressions, empty lists, operations to access head and tail expressions within list constructions, a condition that uses empty lists as true and list constructions as false, and error reports for head and tail operations that operate on empty lists.
+Second, it adds list constructions that contain head and tail expressions, empty lists, operations to access head and tail expressions, a condition that uses empty lists as true and list constructions as false, and error reports for head and tail operations that operate on empty lists.
 
-Third, it adds a static type system called System F.  System F adds types for natural numbers, lists, and functions and the expressions that contain them.  If the type of an expression is valid, it is well-typed; otherwise, it is ill-typed.  Type errors cannot occur in well-typed expressions.  Haskell does not compute ill-typed expressions.  It adds type annotations to empty lists, functions, and error reports to enable the calculation of their types.  It adds parametric polymorphism whereby the types of expressions can be parameterized by type variables and type abstractions and then instantiated with type applications.  It adds types for type variables and type abstractions.  It adds a fixed-point operation, without which Haskell could not express recursive functions and therefore would be Turing-incomplete.
+Third, it adds a static type system called System F.  System F adds types for natural numbers, lists, and functions and the expressions that contain them.  If the type of an expression is valid, it is well-typed; otherwise, it is ill-typed.  Type errors cannot occur in well-typed expressions.  Haskell does not compute ill-typed expressions.  It adds type annotations to empty lists, functions, and error reports to enable the calculation of their types.  It adds type variables, type abstractions, type applications, and types for type variables and type abstractions to enable parametric polymorphism.  It adds a fixed-point operation, without which Haskell could not express recursive functions and therefore would be Turing-incomplete.
 
 Fourth, the values and evaluation contexts of Haskell conform to an extended call-by-name (lazy) evaluation strategy.
 
-An expression is an instance of any syntactic form.  A reduction or evaluation is a step of computation that applies a rewrite rule of an operational semantics to an expression.  A value is an expression that is irreducible.  Letter subscripts of grammar non-terminals and type relations denote the language to which they belong.
-
 Types, denoted $T$, are comprised of the natural number type, denoted $N$; type variables, denoted $X$; function types, denoted $T\rightarrow T$; universally-quantified (forall) types, denoted $\forall X.T$; and list types, denoted $[T]$.
 
-Haskell values, denoted $v_{H}$, are comprised of natural numbers, denoted $\overline{n}$, which syntactically represents the natural number $n$; list constructions, denoted $\mathtt{cons}$ $e_{H}$ $e_{H}$; empty lists, denoted $\mathtt{nil}^{T}$; functions, denoted $\lambda x:T.e_{H}$; and type abstractions, denoted $\Lambda X.e_{H}$.
+Haskell values, denoted $v_{H}$, are comprised of natural numbers, denoted $\overline{n}$, which syntactically represents the natural number $n$; list constructions, denoted $\mathtt{cons}$ $e_{H}$ $e_{H}$; empty lists, denoted $\mathtt{nil}^{T}$; functions, denoted $\lambda x:T.e_{H}$; and type abstractions, denoted $\Lambda X.e_{H}$.  Letter subscripts of grammar non-terminals denote the language to which they belong.
 
 Haskell expressions, denoted $e_{H}$, are comprised of variables, denoted $x$; function applications, denoted $e_{H}$ $e_{H}$; type applications, denoted $e_{H}$ $\lbrace T\rbrace$; addition and subtraction operations, denoted $+$ $e_{H}$ $e_{H}$ and $-$ $e_{H}$ $e_{H}$, respectively; natural number conditions, denoted $\mathtt{if0}$ $e_{H}$ $e_{H}$ $e_{H}$; head and tail operations, denoted $\mathtt{hd}$ $e_{H}$ and $\mathtt{tl}$ $e_{H}$, respectively; list conditions, denoted $\mathtt{ifnil}$ $e_{H}$ $e_{H}$ $e_{H}$; fixed-point operations, denoted $\mathtt{fix}$ $e_{H}$; and error reports, denoted $\mathtt{wrong}^{T}$ string.
 
-Haskell evaluation contexts, denoted $E_{H}$, determine the Haskell evaluation strategy by constraining which expression matches the Haskell hole.  Haskell evaluation contexts are comprised of the Haskell hole, denoted $[\,]_{H}$; left subexpressions of function applications, denoted $E_{H}$ $e_{H}$; subexpressions of type applications, denoted $E_{H}$ $\lbrace T\rbrace$; left operands of arithmetic operations, denoted $o$ $E_{H}$ $e_{H}$; right operands of arithmetic operations if left operands are values, denoted $o$ $v_{H}$ $E_{H}$; guards of natural number conditions, denoted $\mathtt{if0}$ $E_{H}$ $e_{H}$ $e_{H}$; operands of head and tail operations, denoted $f$ $E_{H}$; guards of list conditions, denoted $\mathtt{ifnil}$ $E_{H}$ $e_{H}$ $e_{H}$; and operands of fixed-point operations, denoted $\mathtt{fix}$ $E_{H}$.
-
 Variables and type variables are unique across all languages.  Alpha conversion implicitly resolves name conflicts.
 
-The Haskell typing relation, denoted $\Gamma\vdash_{H}e_{H}:T$, is defined by a set of typing rules.  $\Gamma\vdash_{H}e_{H}:T$ is a typing statement that asserts the type of an expression, and typing rules are implications between typing statements \cite{pierce02}.  An expression $e_{H}$ is well-typed within the context $\Gamma$ if there is some $T$ such that $\Gamma\vdash_{H}e_{H}:T$.  A context is a set of assumptions about the types of variables and the binding of type variables.  Since all programs must be closed, programs containing free variables or free type variables are ill-typed.  Adding to $\Gamma$ assumptions about $x:T$ and $X$ are denoted $\Gamma,x:T$ and $\Gamma,X$, respectively.  $\Gamma\vdash_{H}T$ is a typing statement that asserts $T$ is well-formed within $\Gamma$.  Where the context is empty, it is omitted from typing statements.
+Haskell evaluation contexts, denoted $E_{H}$, are comprised of the Haskell hole, denoted $[\,]_{H}$; left subexpressions of function applications, denoted $E_{H}$ $e_{H}$; subexpressions of type applications, denoted $E_{H}$ $\lbrace T\rbrace$; left operands of arithmetic operations, denoted $o$ $E_{H}$ $e_{H}$; right operands of arithmetic operations if left operands are values, denoted $o$ $v_{H}$ $E_{H}$; guards of natural number conditions, denoted $\mathtt{if0}$ $E_{H}$ $e_{H}$ $e_{H}$; operands of head and tail operations, denoted $f$ $E_{H}$; guards of list conditions, denoted $\mathtt{ifnil}$ $E_{H}$ $e_{H}$ $e_{H}$; and operands of fixed-point operations, denoted $\mathtt{fix}$ $E_{H}$.
+
+$\Gamma\vdash_{H}e_{H}:T$ denotes the Haskell typing relation.  An expression $e_{H}$ is well-typed within the context $\Gamma$ if there is some type $T$ such that $\Gamma\vdash_{H}e_{H}:T$.  Programs that contain free variables or free type variables are ill-typed.  $\Gamma,x:T$ and $\Gamma,X$ denote adding assumptions about the type of variable $x$ and the binding of type variable $X$, respectively.  $\Gamma\vdash_{H}T$ asserts the type $T$ is well-formed within the context $\Gamma$.  Where the context is empty, it is omitted from typing statements.  Letter subscripts of type relations denote the language to which they belong.
 
 Natural numbers, addition and subtraction operations and their operands, and guards of natural number conditions have the natural number type.  Functions, left subexpressions of function applications, and operands of fixed-point operations have function types.  Type abstractions and subexpressions of type applications have forall types.  List constructions, tails of list constructions, empty lists, tail operations, operands of head and tail operations, and guards of list conditions have type list types.
 
 Variables have the types they are assumed to have by the context.  If the context does not assume the type of a variable, the variable is free and the expression is ill-typed.  If the context does not assume the binding of a type variable, the type variable is free and the expression is ill-typed.  $T_{1}[T_{2}/X]$ denotes the substitution of $T_{2}$ for free occurrences of $X$ within $T_{1}$.  Number subscripts and superscripts of grammar symbols in typing rules denote distinct instances of them, but are absent where instances are unambigious.
 
-Haskell computations are defined by a set of rewrite rules called an operational semantics.  A rewrite rule rewrites a reducible expression in the Haskell hole that matches its left side.  Function applications substitute function arguments for free occurrences of function parameters within function bodies.  Type applications substitute type arguments for free occurrences of type abstraction parameters within type abstraction bodies.  Addition and subtraction operations reduce to the addition and subtraction of their operands, respectively.  Natural number conditions reduce to their true or false alternatives if their guards are zero or not zero, respectively.  Head and tail operations on list constructions reduce to the heads and tails of their operands, respectively.  Head and tail operations on empty lists reduce to error reports.  List conditions reduce to their true or false alternatives if their guards are empty lists or list constructions, respectively.  Fixed-point operations reduce to their operands, which are functions, substituted for free occurrences of their function parameters within their function bodies.  Error reports reduce to errors and terminate the computation.
+Haskell computations are defined by an operational semantics.  Function applications substitute function arguments for free occurrences of function parameters within function bodies.  Type applications substitute type arguments for free occurrences of type abstraction parameters within type abstraction bodies.  Addition and subtraction operations reduce to the addition and subtraction of their operands, respectively.  Natural number conditions reduce to their true or false alternatives if their guards are zero or not zero, respectively.  Head and tail operations on list constructions reduce to the heads and tails of their operands, respectively.  Head and tail operations on empty lists reduce to error reports.  List conditions reduce to their true or false alternatives if their guards are empty lists or list constructions, respectively.  Fixed-point operations reduce to their operands, which are functions, substituted for free occurrences of their function parameters within their function bodies.  Error reports reduce to errors and terminate the computation.
 
 $e_{H}^{1}[e_{H}^{2}/x]$ denotes the substitution of $e_{H}^{2}$ for free occurrences of $x$ within $e_{H}^{1}$.  Variable instances that occur only on the right sides of rewrite rules are unique.  All rewrite rules are defined with an unspecified evaluation context $\mathscr{E}$.  The evaluation of a single language would instantiate $\mathscr{E}$ to $E_{H}$ for Haskell, to $E_{M}$ for ML, and to $E_{S}$ for Scheme.  The interoperation of languages would instantiate $\mathscr{E}$ according to the language in which programs begin and end.
 
@@ -50,13 +46,13 @@ ML evaluation contexts extend Haskell evaluation contexts such that all expressi
 
 Scheme is identical to ML except that it removes the static type system and adds a dynamic type system.  It removes all the types and type annotations for functions, empty lists, and error reports.  It removes type abstractions and type applications and the evaluation contexts, typing rules, and rewrite rules that contain them.
 
-The dynamic type system adds type predicate expressions that determine the types of values.  $\mathtt{num?}$ $e_{S}$ determines whether $e_{S}$ is a natural number.  $\mathtt{list?}$ $e_{S}$ determines whether $e_{S}$ is a list.  $\mathtt{fun?}$ $e_{S}$ determines whether $e_{S}$ is a function.
+The dynamic type system adds value predicate expressions that determine the kinds of values.  $\mathtt{num?}$ $e_{S}$ determines whether $e_{S}$ is a natural number.  $\mathtt{list?}$ $e_{S}$ determines whether $e_{S}$ is a list.  $\mathtt{fun?}$ $e_{S}$ determines whether $e_{S}$ is a function.
 
-In addition to ML evaluation contexts, Scheme evaluation contexts are the expression of type predicates, denoted $p$ $E_{S}$.
+In addition to ML evaluation contexts, Scheme evaluation contexts are the expression of value predicates, denoted $p$ $E_{S}$.
 
 It adds a single type called The Scheme Type, $TST$.  Well-typed expressions have type $TST$, and well-typed programs are closed.
 
-It changes the natural number condition to reduce to one if the guard is not zero, and possibly not a natural number.  It changes the list condition to reduce to one if the guard is not an empty list, and possibly not a list.  The type predicates reduce to the natural number zero if true and the natural number one if false.
+It changes the natural number condition to reduce to one if the guard is not zero, and possibly not a natural number.  It changes the list condition to reduce to one if the guard is not an empty list, and possibly not a list.  The value predicates reduce to $\overline{0}$ if true and $\overline{1}$ if false.
 
 \input{model/hce.tex}
 \input{model/mce.tex}
@@ -72,7 +68,7 @@ It changes the natural number condition to reduce to one if the guard is not zer
 
 \section{Interoperation Calculi}
 
-The interoperation calculi extend the core calculi with new expressions, evaluation contexts, typing rules, and rewrite rules to enable interoperation.  They add boundary expressions, which represent values with actual (server) and expected (client) types crossing from servers to clients.  Boundaries are denoted by two-letter acronyms, where the first letter names clients and the second letter names servers.  Expected types are superscripts to the left of the first letters, and actual types are superscripts to the right of the second letters.  Expressions to be reduced to values and cross languages are to the right of the letters and types, separated by a space.  For example, the expression $^{T_{1}}HM^{T_{2}}$ $e_{M}$ denotes $e_{M}$ with expected (Haskell) type $T_{1}$ and actual (ML) type $T_{2}$ crossing from ML to Haskell.  Boundaries can be nested within each other to express interoperation between more than two languages.  Since a set of $n$ interoperable languages requires $n\times(n-1)$ boundaries, this model requires six boundaries.
+The interoperation calculi extend the core calculi with new expressions, evaluation contexts, typing rules, and rewrite rules to enable interoperation.  They add boundary expressions, which represent values with actual and expected types crossing between languages.  Boundaries are denoted by two-letter acronyms, where the first letter names clients and the second letter names servers.  Expected types are superscripts to the left of the first letters, and actual types are superscripts to the right of the second letters.  Expressions to be reduced to values and cross languages are to the right of the letters and types, separated by a space.  For example, the expression $^{T_{1}}HM^{T_{2}}$ $e_{M}$ denotes $e_{M}$ with expected (Haskell) type $T_{1}$ and actual (ML) type $T_{2}$ crossing from ML to Haskell.  Boundaries can be nested within each other to express interoperation between more than two languages.  Since a set of $n$ interoperable languages requires $n\times(n-1)$ boundaries, this model requires six boundaries.
 
 They add evaluation contexts for the subexpressions of boundaries ($^{T}HM^{T}$ $E_{M}$ for example).
 
@@ -84,7 +80,7 @@ The expected and actual types of boundaries determine their reduction.
 
 \subsection{Natural Number Types}
 
-Natural numbers do not change when they cross languages because the languages share the same number domain.  For example, $^{N}HM^{N}$ $\overline{n}$ reduces to $\overline{n}$.
+Natural numbers do not change when they are converted because the languages share the same number domain.  For example, $^{N}HM^{N}$ $\overline{n}$ reduces to $\overline{n}$.
 
 \subsection{List Types}
 
@@ -112,7 +108,7 @@ If a boundary has expected and actual forall types ($^{\forall X.T}HM^{\forall X
 
 If a boundary has an expected forall type and an actual Scheme type ($^{\forall X.T}HS$ $v_{S}$ for example), the value is a Scheme value.  Such a boundary is irreducible because Scheme does not have type abstractions.  Therefore $^{\forall X.T}HS$ $v_{S}$ and $^{\forall X.T}MS$ $v_{S}$ are values.  Nevertheless, there are useful Scheme values that correspond to forall types, and they ought to be convertible.  If the expected forall type is instantiated and the result is not a forall type, the boundary is reducible and the Scheme value is convertible.  However, Haskell and ML preserve parametricity, and instantiating the expected forall type does nothing to prevent the Scheme value, if it is a function, from breaking parametricity once converted.
 
-Scheme functions with expected forall types can break parametricity by using type predicates and conditions to determine their behavior by the types and values of their arguments.  Haskell and ML must wrap their arguments for these functions such that Scheme predicates and conditions cannot examine them.  Expected forall types of boundaries can be instantiated by applying those boundaries to types.  These type applications label their type arguments with unique labels, denoted $T^{a}$, before instantiating the expected forall types with them.  Boundaries with actual label types ($SH^{T^{a}}$ $e_{H}$ for example) are irreducible; Scheme type predicates and conditions cannot examine them.  Therefore $SH^{T^{a}}$ $e_{H}$ and $SM^{T^{a}}$ $v_{M}$ are values.  Scheme can return these wrapped arguments to Haskell and ML if the expected and actual types match.  For example, $^{T^{a}}HS$ $(SH^{T^{a}}$ $e_{H})$ reduces to $e_{H}$.  If they do not match, the outer boundary reduces to a parametricity error report.  See Figure \ref{forall-1} for an example.
+Scheme functions with expected forall types can break parametricity by using value predicates and conditions to determine their behavior by the types and values of their arguments.  Haskell and ML must wrap their arguments for these functions such that Scheme value predicates and conditions cannot examine them.  Expected forall types of boundaries can be instantiated by applying those boundaries to types.  These type applications label their type arguments with unique labels, denoted $T^{a}$, before instantiating the expected forall types with them.  Boundaries with actual label types ($SH^{T^{a}}$ $e_{H}$ for example) are irreducible; Scheme value predicates and conditions cannot examine them.  Therefore $SH^{T^{a}}$ $e_{H}$ and $SM^{T^{a}}$ $v_{M}$ are values.  Scheme can return these wrapped arguments to Haskell and ML if the expected and actual types match.  For example, $^{T^{a}}HS$ $(SH^{T^{a}}$ $e_{H})$ reduces to $e_{H}$.  If they do not match, the outer boundary reduces to a parametricity error report.  See Figure \ref{forall-1} for an example.
 
 \input{figures/forall-1.tex}
 
